Add note to include source

--- a/mocha-chai/spec/index.html
+++ b/mocha-chai/spec/index.html
@@ -20,6 +20,7 @@
             mocha.run();
         };
         </script>
+        <script src="TODO"></script> <!-- Include source -->
         <script src="spec.js"></script>
     </body>
 </html>
